--- a/workoutlogclient/index.html
+++ b/workoutlogclient/index.html
@@ -16,6 +16,7 @@
 	  <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
 	  <li><a href="#define" data-toggle="tab">Define</a></li>
 	  <li><a href="#log" data-toggle="tab">Log</a></li>
+	  <li><a href="#" id="testAPI">Test API</a></li>
 
 	</ul>
 	
@@ -27,7 +28,7 @@
 	</div>
    </div>
 
-
+   		<script src="app.js"></script>
 	</body>
 
 
