--- a/workoutlogclient/index.html
+++ b/workoutlogclient/index.html
@@ -98,5 +98,6 @@
 
   <script src="app.js"></script>
   <script src="./user/auth.js"></script>
+  <script src="./workouts/define.js"></script>
 </body>
 </html>
