--- a/workoutlogclient/index.html
+++ b/workoutlogclient/index.html
@@ -36,7 +36,20 @@
       </div>
     </div>
   </div>
-
+<!-- Define -->
+   <div class="tab-pane" id="define">
+        <h2>Define</h2>
+          <label for="def-description">Description</label>
+          <textarea class="form-control" id="def-description" rows="3" ></textarea>
+          <label for="def-logtype">Log work by</label>
+          <select class="form-control" id="def-logtype">
+            <option>Time</option>
+            <option>Weight</option>
+            <option>Reps</option>
+          </select>
+          <button id="def-save" class="btn btn-primary">Save</button>
+      </div
+  
   <!--Login Modal-->
   <div class="modal fade" id="login-modal" role="dialog">
       <div class="modal-dialog">
@@ -83,11 +96,6 @@
      </div>
    </div>
  </div>
-
-
-
-
-
 
 
 
