--- a/workoutlogclient/index.html
+++ b/workoutlogclient/index.html
@@ -48,8 +48,26 @@
             <option>Reps</option>
           </select>
           <button id="def-save" class="btn btn-primary">Save</button>
-      </div
+      </div>
   
+    <div class="tab-pane fade" id="log">
+        <h2>log!</h2>
+        <label>Result</label>
+        <input type="text" class="form-control" id="log-result" />
+        <label>Workout Select:</label>
+        <select class="form-control" id="log-definition">
+        </select>
+        <label>notes</label>
+        <textarea class="form-control" id="log-description" rows="3"></textarea>
+        <button id="log-save" class="btn btn-primary">Save</button>
+      </div>
+      <div class="tab-pane fade" id="history">
+        <h2>History</h2>
+        <ul class="list-group" id="history-list">
+        </ul>
+      </div>
+    </div>
+
   <!--Login Modal-->
   <div class="modal fade" id="login-modal" role="dialog">
       <div class="modal-dialog">
@@ -107,5 +125,6 @@
   <script src="app.js"></script>
   <script src="./user/auth.js"></script>
   <script src="./workouts/define.js"></script>
+  <script src="./workouts/log.js"></script>
 </body>
 </html>
