--- a/workoutlogclient/index.html
+++ b/workoutlogclient/index.html
@@ -1,25 +1,37 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Workout Log</title>
 
-  <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <link href="/bower_components/bootstrap/dist/css/custom-workout.css" rel="stylesheet">
 
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
+
+
   <ul class="nav nav-tabs">
-    <li><a href="#home" id="loginout" class="disabled" data-toggle="tab">Login</a></li>
-    <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
-    <li><a href="#define" data-toggle="tab">Define</a></li>
-    <li><a href="#log" data-toggle="tab">Log</a></li>
-    <li><a href="#history" data-toggle="tab">View History</a></li>
-    <li><a href="#" id="testAPI">Test API</a></li>
+    <li><a href="#home" id="loginout" class="disabled" data-toggle="tab">Login</a>
+      <!--logout too -->
+    </li>
+    <li><a href="#define" class="disabled" data-toggle="tab">Define</a></li>
+    <li><a href="#log" class="disabled" data-toggle="tab">Log</a></li>
+    <li><a href="#history" class="disabled" data-toggle="tab">View History</a></li>
+
   </ul>
 
   <div class="container">
@@ -27,6 +39,7 @@
       <div class="tab-pane active" id="home">
         <h2>Workout Log</h2>
         <div id="forLogin">
+          <!-- have the class build the modals for these http://getbootstrap.com/javascript/#modals -->
           <button data-toggle="modal" data-target="#login-modal" class="btn btn-primary">Login</button>
           <button data-toggle="modal" data-target="#signup-modal" class="btn btn-primary">Sign Up</button>
         </div>
@@ -34,10 +47,8 @@
           <button class="btn btn-primary">Logout</button>
         </div>
       </div>
-    </div>
-  </div>
-<!-- Define -->
-   <div class="tab-pane" id="define">
+      <!-- DEFINE -->
+      <div class="tab-pane fade" id="define">
         <h2>Define</h2>
           <label for="def-description">Description</label>
           <textarea class="form-control" id="def-description" rows="3" ></textarea>
@@ -49,8 +60,9 @@
           </select>
           <button id="def-save" class="btn btn-primary">Save</button>
       </div>
-  
-    <div class="tab-pane fade" id="log">
+
+    
+      <div class="tab-pane fade" id="log">
         <h2>log!</h2>
         <label>Result</label>
         <input type="text" class="form-control" id="log-result" />
@@ -61,39 +73,35 @@
         <textarea class="form-control" id="log-description" rows="3"></textarea>
         <button id="log-save" class="btn btn-primary">Save</button>
       </div>
-      <div class="tab-pane fade" id="history">
+      <div class="tab-pane" id="history">
         <h2>History</h2>
         <ul class="list-group" id="history-list">
         </ul>
       </div>
     </div>
 
-  <!--Login Modal-->
-  <div class="modal fade" id="login-modal" role="dialog">
-      <div class="modal-dialog">
-        <div class="modal-content">
-         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Login</h4>
-        </div>
-        <div class="modal-body">
-          <div class="alert alert-danger" style="display: none;" role="alert" id="li_error"></div>
-          <label for="li_username">Username:</label>
-          <input id="li_username" />
-          <label for="li_password">Password:</label>
-          <input type="password" id="li_password" />
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button id="login" type="button" class="btn btn-primary">Login</button>
-        </div>
-       </div>
+ <div class="modal fade" id="login-modal" role="dialog">
+   <div class="modal-dialog">
+     <div class="modal-content">
+       <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Login</h4>
+      </div>
+      <div class="modal-body">
+        <div class="alert alert-danger" style="display: none;" role="alert" id="li_error"></div>
+        <label for="li_username">Username:</label>
+        <input id="li_username" />
+        <label for="li_password">Password:</label>
+        <input type="password" id="li_password" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button id="login" type="button" class="btn btn-primary">Login</button>
+      </div>
      </div>
    </div>
-
-   <!--sign up-->
-
-      <div class="modal fade" id="signup-modal" role="dialog">
+ </div>
+ <div class="modal fade" id="signup-modal" role="dialog">
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">
@@ -115,16 +123,16 @@
    </div>
  </div>
 
-
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
-  <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-  <script src="app.js"></script>
-  <script src="./user/auth.js"></script>
-  <script src="./workouts/define.js"></script>
-  <script src="./workouts/log.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./app.js"></script>
+    <script src="./user/auth.js"></script> 
+    <script src="./workouts/define.js"></script>
+    <script src="./workouts/log.js"></script>
+<!--
+    <script src="./dist/bundle.js"></script> -->
 </body>
+
 </html>
