--- a/workoutlogclient/index.html
+++ b/workoutlogclient/index.html
@@ -9,9 +9,7 @@
   <title>Workout Log</title>
 
   <!-- Bootstrap -->
-  <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-  <link href="/bower_components/bootstrap/dist/css/custom-workout.css" rel="stylesheet">
-
+  <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,6 +29,7 @@
     <li><a href="#define" class="disabled" data-toggle="tab">Define</a></li>
     <li><a href="#log" class="disabled" data-toggle="tab">Log</a></li>
     <li><a href="#history" class="disabled" data-toggle="tab">View History</a></li>
+    <a href="#update-log" data-toggle="tab" class="disabled" type="hidden"></a>
 
   </ul>
 
@@ -73,7 +72,24 @@
         <textarea class="form-control" id="log-description" rows="3"></textarea>
         <button id="log-save" class="btn btn-primary">Save</button>
       </div>
-      <div class="tab-pane" id="history">
+
+      <!--UPDATING A WORKOUT SECTION-->
+      <div class="tab-pane fade" id="update-log">
+        <h2>Log Update</h2>
+        <label>Result</label>
+        <input type="hidden" class="form-control" id="update-id" />
+        <input type="text" class="form-control" id="update-result" />
+        <label>Workout Select:</label>
+        <select class="form-control" id="update-definition">
+        </select>
+        <label>notes</label>
+        <textarea class="form-control" id="update-description" rows="3"></textarea>
+        <br />
+        <button id="log-update" class="btn btn-primary">Save</button>
+      </div>
+
+      
+      <div class="tab-pane fade" id="history">
         <h2>History</h2>
         <ul class="list-group" id="history-list">
         </ul>
