--- a/workoutlogclient/index.html
+++ b/workoutlogclient/index.html
@@ -9,7 +9,9 @@
   <title>Workout Log</title>
 
   <!-- Bootstrap -->
-  <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <link href="/bower_components/bootstrap/dist/css/custom-workout.css" rel="stylesheet">
+
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +32,6 @@
     <li><a href="#log" class="disabled" data-toggle="tab">Log</a></li>
     <li><a href="#history" class="disabled" data-toggle="tab">View History</a></li>
     <a href="#update-log" data-toggle="tab" class="disabled" type="hidden"></a>
-
   </ul>
 
   <div class="container">
@@ -39,7 +40,7 @@
         <h2>Workout Log</h2>
         <div id="forLogin">
           <!-- have the class build the modals for these http://getbootstrap.com/javascript/#modals -->
-          <button data-toggle="modal" data-target="#login-modal" class="btn btn-primary">Login</button>
+          <button data-toggle="modal" data-target="#login-modal" class="btn btn-primary">Login</button> <!-- data-target: is a way for bootstrap to target that button for popup -->
           <button data-toggle="modal" data-target="#signup-modal" class="btn btn-primary">Sign Up</button>
         </div>
         <div id="forLogout" style="display:none;">
@@ -73,7 +74,7 @@
         <button id="log-save" class="btn btn-primary">Save</button>
       </div>
 
-      <!--UPDATING A WORKOUT SECTION-->
+       <!--UPDATING A WORKOUT SECTION-->
       <div class="tab-pane fade" id="update-log">
         <h2>Log Update</h2>
         <label>Result</label>
@@ -89,7 +90,7 @@
       </div>
 
       
-      <div class="tab-pane fade" id="history">
+      <div class="tab-pane" id="history">
         <h2>History</h2>
         <ul class="list-group" id="history-list">
         </ul>
@@ -138,6 +139,14 @@
      </div>
    </div>
  </div>
+
+
+ <div class="message">
+ <ul id="messages"></ul>
+    <form action="">
+      <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
